do316/materials/solutions/network-review/service-database.yaml
kind: Service
apiVersion: v1
metadata:
  name: database
  namespace: network-review
spec:
  type: ClusterIP
  selector:
    tier: backend
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
