do316/materials/solutions/network-review/service-ssh.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    flavor.template.kubevirt.io/small: "true"
    kubevirt.io: virt-launcher
    kubevirt.io/created-by: c87ee674-4ddc-3efe-a74e-dfe25da5d7b3
    kubevirt.io/domain: front-web
    kubevirt.io/nodeName: worker01
    kubevirt.io/size: small
    os.template.kubevirt.io/rhel8.4: "true"
    tier: frontend
    vm.kubevirt.io/name: front-web
    workload.template.kubevirt.io/server: "true"
  name: ssh-web
spec:
  ports:
  - port: 22
    protocol: TCP
    targetPort: 22
  selector:
    kubevirt.io/domain: front-web
  type: LoadBalancer
status:
  loadBalancer: {}
