do316/materials/solutions/network-review/service-web.yaml
kind: Service
apiVersion: v1
metadata:
  name: web
  namespace: network-review
spec:
  type: ClusterIP
  selector:
    tier: frontend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
